# GaMM

./: .gitignore  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  PYPI_README.md  README.md  pyproject.toml
docs/: index.rst
examples/: run_synthetic_benchmark.py  synthetic_5m.py
src/gamm/: __init__.py  data.py  experiment.py  garch.py  metrics.py  model.py  tuning.py
tests/: test_data.py  test_imports.py  test_metrics.py  test_tuning_space.py
