[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volatility-gamm"
version = "0.1.1"
description = "GARCH-based MLP Mixer for high-frequency volatility forecasting and risk assessment."
readme = "PYPI_README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Aryan Bhambu"},
    {name = "Koushik Bera"},
    {name = "Selvaraju Natarajan"},
    {name = "Ponnuthurai Nagaratnam Suganthan"},
]
keywords = ["gamm", "garch", "mlp-mixer", "volatility", "finance", "high-frequency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
]

[project.optional-dependencies]
model = [
    "tensorflow>=2.12",
]
tuning = [
    "hyperopt>=0.2.7",
    "setuptools<81",
]
arch = [
    "arch>=6.0",
]
dev = [
    "build",
    "hyperopt>=0.2.7",
    "pytest",
    "setuptools<81",
    "twine",
]
full = [
    "arch>=6.0",
    "hyperopt>=0.2.7",
    "setuptools<81",
    "tensorflow>=2.12",
]

[project.urls]
Homepage = "https://github.com/statsdl/GaMM"
Issues = "https://github.com/statsdl/GaMM/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
